@@ -39,7 +39,7 @@ local function sliceaction(index)
 		slice_queries[index][name] = count + 1
 
 		-- refuse query
-		local answer = req.answer
+		local answer = req:ensure_answer()
 		answer:rcode(kres.rcode.REFUSED)
 		answer:ad(false)
 		return kres.DONE
